# flutter_zero

./: .gitignore  DEPS  README.md  analysis_options.yaml  pubspec.yaml  update_flutter_tools.sh
engine/src/flutter/: BUILD.gn  engine.code-workspace  pubspec.yaml
engine/src/flutter/ci/builders/: linux_android_debug_engine.json  linux_android_emulator.json  linux_arm_host_engine.json  linux_host_engine.json  linux_host_engine_test.json  linux_unopt.json  mac_host_engine.json  mac_ios_engine_no_ext_safe.json  windows_arm_host_engine.json  windows_host_engine.json
engine/src/flutter/ci/builders/standalone/: linux_benchmarks.json
engine/src/flutter/common/: settings.h  task_runners.cc  task_runners.h
engine/src/flutter/fml/: thread.h
engine/src/flutter/fml/platform/win/: file_win_unittests.cc
engine/src/flutter/lib/snapshot/: BUILD.gn
engine/src/flutter/lib/ui/: BUILD.gn  dart_runtime_hooks.cc  dart_ui.cc  dart_ui.gni  geometry.dart  hooks.dart  hooks_unittests.cc  natives.dart  painting.dart  platform_dispatcher.dart  ui.dart  ui_benchmarks.cc  ui_dart_state.cc  ui_dart_state.h
engine/src/flutter/lib/ui/fixtures/: ui_test.dart
engine/src/flutter/lib/ui/painting/: immutable_buffer.cc  immutable_buffer.h
engine/src/flutter/lib/ui/window/: platform_configuration.cc  platform_configuration.h  platform_configuration_unittests.cc  platform_message_response_dart_port_unittests.cc  platform_message_response_dart_unittests.cc
engine/src/flutter/lib/web_ui/: pubspec.yaml
engine/src/flutter/lib/web_ui/dev/: build.dart  felt.dart  test_platform.dart  test_runner.dart  utils.dart
engine/src/flutter/lib/web_ui/dev/steps/: copy_artifacts_step.dart  run_suite_step.dart
engine/src/flutter/lib/web_ui/flutter_js/: sources.gni
engine/src/flutter/lib/web_ui/flutter_js/src/: loader.js
engine/src/flutter/lib/web_ui/lib/: geometry.dart  painting.dart  platform_dispatcher.dart  ui.dart
engine/src/flutter/lib/web_ui/lib/src/: engine.dart
engine/src/flutter/lib/web_ui/test/common/: matchers.dart  test_initialization.dart
engine/src/flutter/lib/web_ui/test/engine/: app_bootstrap_test.dart  util_test.dart
engine/src/flutter/runtime/: BUILD.gn  dart_isolate.cc  dart_isolate.h  dart_isolate_unittests.cc  dart_lifecycle_unittests.cc  dart_plugin_registrant_unittests.cc  dart_vm.cc  dart_vm.h  dart_vm_unittests.cc  no_dart_plugin_registrant_unittests.cc  platform_data.h  platform_isolate_manager_unittests.cc  runtime_controller.cc  runtime_controller.h  runtime_delegate.h  type_conversions_unittests.cc
engine/src/flutter/runtime/fixtures/: runtime_test.dart
engine/src/flutter/shell/: config.gni
engine/src/flutter/shell/common/: BUILD.gn  base64_unittests.cc  dart_native_benchmarks.cc  engine.cc  engine.h  engine_unittests.cc  platform_view.cc  platform_view.h  run_configuration.cc  shell.cc  shell.h  shell_benchmarks.cc  shell_test.cc  shell_test.h  shell_test_platform_view.cc  shell_test_platform_view.h  shell_unittests.cc  switch_defs.h  switches.cc  switches_unittests.cc  thread_host.cc  thread_host.h
engine/src/flutter/shell/common/fixtures/: shell_test.dart
engine/src/flutter/shell/platform/android/: BUILD.gn  android_shell_holder.cc  android_shell_holder.h  android_shell_holder_unittests.cc  flutter_main.cc  flutter_main.h  library_loader.cc  platform_view_android.cc  platform_view_android.h  platform_view_android_jni_impl.cc  platform_view_android_jni_impl.h
engine/src/flutter/shell/platform/android/jni/: BUILD.gn  jni_mock.h  platform_view_android_jni.h
engine/src/flutter/shell/platform/common/: BUILD.gn
engine/src/flutter/shell/platform/common/client_wrapper/: BUILD.gn  core_implementations.cc  plugin_registrar_unittests.cc
engine/src/flutter/shell/platform/common/public/: flutter_plugin_registrar.h
engine/src/flutter/shell/platform/darwin/common/: InternalFlutterSwiftCommon-Bridging-Header.h  framework_common.gni
engine/src/flutter/shell/platform/darwin/ios/: BUILD.gn  platform_message_handler_ios_test.mm  platform_view_ios.h  platform_view_ios.mm
engine/src/flutter/shell/platform/embedder/: BUILD.gn  embedder.cc  embedder.h  embedder_engine.cc  embedder_engine.h  embedder_thread_host.cc  platform_view_embedder.cc  platform_view_embedder.h  platform_view_embedder_unittests.cc
engine/src/flutter/shell/platform/linux/: BUILD.gn  fl_engine.cc  fl_engine_private.h  fl_engine_test.cc  fl_plugin_registrar.cc  fl_plugin_registrar_private.h  fl_plugin_registrar_test.cc
engine/src/flutter/shell/platform/windows/: BUILD.gn  flutter_project_bundle.cc  flutter_windows.cc  flutter_windows_engine.cc  flutter_windows_engine.h  flutter_windows_engine_unittests.cc  flutter_windows_internal.h  flutter_windows_unittests.cc
engine/src/flutter/shell/testing/: BUILD.gn  tester_main.cc
engine/src/flutter/shell/version/: BUILD.gn  version.cc  version.gni  version.h
engine/src/flutter/testing/: BUILD.gn  dart_isolate_runner.cc  dart_isolate_runner.h  run_tests.py  testing.cc  testing.h
engine/src/flutter/testing/android/native_activity/: BUILD.gn
engine/src/flutter/testing/dart/: BUILD.gn  assets_test.dart  geometry_test.dart  isolate_test.dart  pubspec.yaml  spawn_test.dart  window_test.dart
engine/src/flutter/testing/dart/vm_service/: BUILD.gn  vmservice_methods_test.dart
engine/src/flutter/testing/ios_scenario_app/: pubspec.yaml
engine/src/flutter/testing/ios_scenario_app/lib/: main.dart
engine/src/flutter/testing/symbols/: verify_exported.dart
engine/src/flutter/tools/: gn  pub_get_offline.py
engine/src/flutter/tools/api_check/lib/: apicheck.dart
engine/src/flutter/tools/api_check/test/: apicheck_test.dart
engine/src/flutter/tools/javadoc/: gen_javadoc.py
engine/src/flutter/tools/licenses_cpp/data/: exclude.txt
engine/src/flutter/tools/pkg/github_workflow_generator/: README.md  analysis_options.yaml  pubspec.yaml
engine/src/flutter/web_sdk/: BUILD.gn  libraries.json  libraries.yaml  sdk_rewriter.dart
engine/src/flutter/web_sdk/test/: sdk_rewriter_test.dart
engine/src/flutter/web_sdk/web_test_utils/: pubspec.yaml
(+122 files in other folders)
